--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@lesnoypudge/eslint-react-config",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "lesnoypudge's eslint-react-config",
     "main": "eslint.config.js",
     "type": "module",
@@ -28,7 +28,7 @@
         "eslint-plugin-jsx-control-statements": "^3.0.0",
         "eslint-plugin-only-warn": "^1.1.0",
         "eslint-plugin-react": "^7.34.1",
-        "eslint-plugin-react-compiler": "^0.0.0-experimental-c8b3f72-20240517",
+        "eslint-plugin-react-compiler": "0.0.0-experimental-c8b3f72-20240517",
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-refresh": "^0.4.7",
         "eslint-plugin-tsdoc": "^0.2.17",
